added domain classes and h2 in memory database, added put for updating dumpsters and added/modified endpoints for plants querying